--- a/ReduxCore/assets/css/style.less
+++ b/ReduxCore/assets/css/style.less
@@ -383,10 +383,9 @@ border: 1px solid #e5e5e5;
 	font-weight:normal;
 	display:block;
 }
-#redux-main .redux-group-tab .form-table tr td input.redux-field-error{
+#redux-main .redux-field-error input, #redux-main .redux-field-error textarea, #redux-main .redux-field-error select {
 	border-color:#B94A48;
 }
-
 
 /* reset nested tables for mce */
 .redux-group-tab .form-table tr td table.mceLayout,
@@ -527,18 +526,18 @@ border: 1px solid #e5e5e5;
 .mp6 #redux-container #info_bar a {
 	margin-top: 2px;
 }
-#redux-container #info_bar {
-	background: #f3f3f3;
-	border:solid #d8d8d8;
-	border-bottom:1px solid #D8D8D8;
-	border-width:0px 1px 1px 1px;
-	padding: 6px 10px 6px 6px;
-	text-align: right;
-	-moz-box-shadow: inset 0 1px 0 #fcfcfc;
-	-webkit-box-shadow: inset 0 1px 0 #fcfcfc;
-	box-shadow: inset 0 1px 0 #fcfcfc;
-}
 
+#redux-container #info_bar {
+  background: #f3f3f3;
+  border-color: #d8d8d8;
+  border-style: solid;
+  border-width: 0px 1px 1px 1px;
+  padding: 6px 10px 6px 6px;
+  text-align: right;
+  -moz-box-shadow: inset 0 1px 0 #fcfcfc;
+  -webkit-box-shadow: inset 0 1px 0 #fcfcfc;
+  box-shadow: inset 0 1px 0 #fcfcfc;
+}
 
 #redux-container #expand_options{
 	cursor: pointer;
@@ -940,7 +939,7 @@ img {
 	}
 	
 	table.form-table, .form-table > thead, .form-table > tbody, .form-table > tbody > tr > th, .form-table > tbody > tr > td, .form-table > tbody > tr {
-		display: block !important;
+		display: block;
 		width: 100% !important;
 		padding: 0px !important;
 	}
